--- a/week3/src/style.css
+++ b/week3/src/style.css
@@ -8,7 +8,7 @@ html {
 #background {
   width: 100%;
   height: 100vh;
-  background-image: url("./imgs/sindang.png");
+  background-image: url("../imgs/sindang.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
