--- a/final_2/src/index.css
+++ b/final_2/src/index.css
@@ -11,6 +11,9 @@ canvas {
   display: block;
 }
 
+canvas .cursor-none {
+  cursor: none;
+}
 /* 스크롤바 숨기기 */
 ::-webkit-scrollbar {
   display: none;
